Fix token page URL

Summary:
It seems like Google changed the URL of the token page.
Maybe we should use QString::startsWith, to be futureproof?

BUG: 388483

Test Plan:
- Login in KOrganizer and KMail works again
- All tests pass (though i think there is no oauth2 test)

Reviewers: dvratil, mlaurent

Reviewed By: mlaurent

Differential Revision: https://phabricator.kde.org/D9843