src/core/ui/authwidget_p.h
@@ -79,7 +79,7 @@ class Q_DECL_HIDDEN AuthWidgetPrivate: public QObject {
     bool isSigninPage(const QUrl &url) const { return url.path() == QLatin1String("/signin/oauth"); }
     bool isUsernameFrame(const QUrl &url) { return url.path() == QLatin1String("/signin/oauth/identifier"); }
     bool isPasswordFrame(const QUrl &url) { return url.path() == QLatin1String("/signin/v2/challenge/pwd"); }
-    bool isTokenPage(const QUrl &url) { return url.path() == QLatin1String("/o/oauth2/approval/v2"); }
+    bool isTokenPage(const QUrl &url) { return url.path() == QLatin1String("/o/oauth2/approval/v2/approvalnativeapp"); }
 
     void setSslIcon(const QString &icon);
 
